Fix a z-index issue

--- a/app/assets/stylesheets/ui-customizations.css.scss
+++ b/app/assets/stylesheets/ui-customizations.css.scss
@@ -33,7 +33,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d9a500', end
 
 .navbar-collapse {
 	position: relative;
-	z-index: 0;
 }
 
 .navbar-nav {
